Prevent cells containing test case results from wrapping.
Monotone-Parent: 2f62c3a58e8fc66676221dedbf7b7a4ee3adb34a
Monotone-Revision: 00b69d9d9c061c932f97813d551ef38fa9be23b0

Monotone-Author: jmmv@NetBSD.org
Monotone-Date: 2011-12-22T17:18:13
Monotone-Branch: org.NetBSD.atf.src

--- a/atf-report/tests-results.css
+++ b/atf-report/tests-results.css
@@ -31,6 +31,10 @@ body {
     margin: 0 0 0 0;
 }
 
+.nobr {
+    white-space: nowrap;
+}
+
 h1 {
     background: black;
     color: white;
